--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,54 +1,30 @@
-working_dir: &working_dir ~/app
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
 
-.build_template: &build_definition
-  steps:
-    - checkout
-    - run: curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-    - run: chmod +x ./cc-test-reporter
-    - run: ./cc-test-reporter before-build
-    - run: gem install bundler:2.1.4
-    - run: bundle install --jobs=4 --retry=4 --path vendor/bundle
-    - run: bundle exec rake rubocop
-    - run: chmod +x ./nikmat.sh
-    - run: ./nikmat.sh
+# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
+# See: https://circleci.com/docs/2.0/orb-intro/
+orbs:
+  ruby: circleci/ruby@0.1.2
 
-version: 2.0
-
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   build:
     docker:
-      - image: ruby
+      - image: circleci/ruby:2.6.3-stretch-node
+    executor: ruby/default
     steps:
       - checkout
-  build_ruby2_9:
-    <<: *build_definition
-    docker:
-      - image: ruby:2.9
-  build_ruby2_8:
-    <<: *build_definition
-    docker:
-      - image: ruby:2.8
-  build_ruby2_7:
-    <<: *build_definition
-    docker:
-      - image: ruby:2.7
-  build_ruby2_6:
-    <<: *build_definition
-    docker:
-      - image: ruby:2.6
-  build_ruby2_5:
-    <<: *build_definition
-    docker:
-      - image: ruby:2.5
+      - run:
+          name: Which bundler?
+          command: bundle -v
+      - ruby/bundle-install
 
-
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  version: 2
-  build_ruby_versions:
+  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build
-      - build_ruby2_9
-      - build_ruby2_8
-      - build_ruby2_7
-      - build_ruby2_6
-      - build_ruby2_5
